# Integration topology SSOT entrypoint.
# Keep at least one integration-labeled test discoverable at top-level.
add_test(NAME infra_integration_topology_smoke COMMAND ${CMAKE_COMMAND} -E true)
set_tests_properties(infra_integration_topology_smoke PROPERTIES LABELS "integration")

add_subdirectory(infra)
add_subdirectory(profiles)
add_subdirectory(platform)

set(DASALL_INTEGRATION_TEST_EXECUTABLE_TARGETS
	dasall_infra_diagnostics_smoke_integration_test
	dasall_infra_audit_health_integration_test
	dasall_config_runtime_patch_integration_test
	dasall_config_observability_integration_test
	dasall_health_wiring_integration_test
	dasall_logging_pipeline_integration_test
	dasall_logging_audit_link_integration_test
	dasall_log_query_integration_test
	dasall_policy_lifecycle_integration_test
	dasall_policy_health_integration_test
	dasall_secret_rotation_workflow_integration_test
	dasall_secret_failure_injection_integration_test
	dasall_tracing_bridge_reachability_integration_test
	dasall_profiles_build_runtime_integration_test
	dasall_profile_observability_integration_test
	dasall_linux_platform_bootstrap_integration_test
	PARENT_SCOPE
)

